--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -125,6 +125,17 @@ even stronger inferences if they believe that another person selected
 their actions with the goal of helping them learn (i.e., teaching)
 (Shafto, Goodman, \& Frank, 2012).
 
+\begin{CodeChunk}
+\begin{figure*}[tb]
+
+{\centering \includegraphics[width=1\linewidth]{figs/model_diagram-1} 
+
+}
+
+\caption[Diagram of the computational model]{Diagram of the computational model: The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence).}\label{fig:model_diagram}
+\end{figure*}
+\end{CodeChunk}
+
 But how can we begin to understand the role of \emph{social} factors in
 self-directed learning contexts? Answering this question represents a
 significant step because explore-exploit decisions often unfold within
@@ -183,17 +194,6 @@ a toy works (\emph{learning utility}), to make the toy operate and
 perform a given function (\emph{performance utility}), or to present
 himself as a competent individual who knows how to make the toy work
 (\emph{presentational utility}; see the model diagram in Figure 1).
-
-\begin{CodeChunk}
-\captionsetup{width=0.8\textwidth}\begin{figure*}[h]
-
-{\centering \includegraphics{figs/model_diagram-1} 
-
-}
-
-\caption[Diagram of the computational model]{Diagram of the computational model: The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence).}\label{fig:model_diagram}
-\end{figure*}
-\end{CodeChunk}
 
 First, the \emph{learning utility} symbolizes the goal to learn new
 information, which in our paradigm specifically is associated with
@@ -288,18 +288,31 @@ action \(a\) approximately optimally (as per optimality parameter
 
 \section{Experiment 1}\label{experiment-1}
 
+\begin{CodeChunk}
+\begin{figure*}[t]
+
+{\centering \includegraphics[width=0.95\linewidth]{figs/e1_behav_results-1} 
+
+}
+
+\caption[Behavioral results for E1]{Behavioral results for E1.}\label{fig:e1_behav_results}
+\end{figure*}
+\end{CodeChunk}
+
 In our Experiments, we wanted to look at people's action choices in a
 minimalistic self-directed learning environment with varying goals and
 social contexts. In Experiment 1, we wanted to confirm that participants
 will choose actions based on different goal descriptions, depending on
 whether we highlight learning goal, performance goal, or presentation
-goal. We were interested to see what people will choose to do when no
-goal is specified and they are free to explore. Thus, we asked
-participants to imagine a scenario in which they were expected to act on
-a toy with an uncertain causal mechanism, and we assigned participants
-to different goal conditions: learning goal (i.e.~learn how the toy
-works); performance goal (e.g.~make the toy play music); presentation
-goal (i.e.~impress their boss); and no goal.
+goal.
+
+We were interested to see what people will choose to do when no goal is
+specified and they are free to explore. Thus, we asked participants to
+imagine a scenario in which they were expected to act on a toy with an
+uncertain causal mechanism, and we assigned participants to different
+goal conditions: learning goal (i.e.~learn how the toy works);
+performance goal (e.g.~make the toy play music); presentation goal
+(i.e.~impress their boss); and no goal.
 
 \subsection{Method}\label{method}
 
@@ -314,74 +327,112 @@ our final analysis.
 
 \subsubsection{Stimuli and Design}\label{stimuli-and-design}
 
-We presented three different toys that look very similar but each work
-in different ways, and provided instructions for them. The
-``ButtonMusic'' toy instructions were: \emph{``Press the button on the
-right to play music. Pull the handle on the left to turn on the light.
-Doing both produces both effects.''} The ``HandleMusic'' toy instuctions
-were: \emph{``Pull the handle on the left to play music. Press the
-button on the right to turn on the light. Doing both produces both
-effects.''} The ``BothMusicLight'' toy instuctions were: \emph{``Pull
-the handle on the left AND press the button on the right to turn on the
-light and play music at the same time. The button press or handle pull
-on its own doesn't produce any effect.''} Each toy had a label showing
-its name.
+We presented images of three different toys that look very similar but
+each work in different ways, and provided instructions for them (see top
+of Fig. 1 for the toy types). Toy 1 instructions were: \emph{``Pull the
+handle on the left to turn on the light.Press the button on the right to
+play music. Doing both produces both effects at the same time.''} Toy 2
+instuctions were: \emph{``Pull the handle on the left to play music.
+Press the button on the right to turn on the light. Doing both produces
+both effects.''} Toy 3 instuctions were: \emph{``Pull the handle on the
+left AND press the button on the right to turn on the light and play
+music at the same time. The button press or handle pull on its own
+doesn't produce any effect.''} Each toy had a label at the front,
+indicating which action(s) will make the toy operate, and with which
+outcome effect.
 
-We presented a story to the participants that motivated a goal the
-participants must achieve by acting on a given toy. Importantly, the
+We asked participants to act on one of these toys; importantly, the
 given toy was missing its label, such that partcipants could not know
-whether the toy was a ButtonMusic, HandleMusic, or BothMusicLight toy.
-For all the participants, we asked them to imagine that they were a
-children's toy developer and that one day, their boss approached them
-and said: ``That must be one of the new toys that you've been working
-on. But it looks like you forgot to put on the label! Can you figure out
-whether this toy is a ButtonMusic toy, HandleMusic toy, or
-BothMusicLight toy?'' (\emph{learning} condition); ``That must be one of
-the new toys that you've been working on. I want to hear the music it
-plays.'' (\emph{performance} condition); or ``That must be one of the
-new toys that you've been working on. How does it work?'' followed by
-the prompt ``\ldots{} {[}Imagine{]} you only had one chance to impress
-your boss and show that you're competent \ldots{}'' (\emph{presentation}
-condition). We asked participants to select an action they would like to
-try out on the toy in order to accomplish the specified goal, out of
-three possible actions: to ``press the button'', ``pull the handle'', or
-``press the button and pull the handle.'' We randomly assigned each
-participant to one of the three goal conditions, and randomized the
-order of actions to choose from.
+whether the toy was Toy 1, 2 or 3. We assigned participants into four
+goal conditions: For participants in \emph{learning},
+\emph{performance}, and \emph{presentation} conditions, we asked them to
+imagine that they were children's toy developers and that one day, their
+boss approached them and said: ``That must be one of the new toys that
+you've been working on. But it looks like you forgot to put on the
+label! Can you figure out whether this toy is a ButtonMusic toy,
+HandleMusic toy, or BothMusicLight toy?'' (\emph{learning} condition);
+``That must be one of the new toys that you've been working on. I want
+to hear the music it plays.'' (\emph{performance} condition); or ``That
+must be one of the new toys that you've been working on. How does it
+work?'' followed by the prompt ``\ldots{} {[}Imagine{]} you only had one
+chance to impress your boss and show that you're competent \ldots{}''
+(\emph{presentation} condition). We asked participants to select an
+action they would like to try out on the toy in order to accomplish the
+specified goal, out of three possible actions: to ``press the button'',
+``pull the handle'', or ``press the button and pull the handle.'' We
+randomly assigned each participant to one of the three goal conditions,
+and randomized the order of actions to choose from.
 
 \subsubsection{Procedure}\label{procedure}
 
-Participants were first introduced to the task with a picture of a toy
-with labels on its parts. Then they read instructions for each of the
-three toys, after which they were asked what they would do to make the
-toy operate as manipulation check (e.g. ``How would you make the toy
-play music?''). We asked participants to rate prior likelihood that an
-unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight
-toy, to use as priors for our model. Participants then read a scenario
-for one of the three goal conditions, followed by the question: ``If you
-only had one chance to try a SINGLE action to {[}goal{]}, which action
-would you want to take? You will get a 10 cent bonus after submitting
-the HIT if you {[}goal{]}.'' After selecting one of three possible
-actions to perform on the toy and seeing that the toy successfully
-played music, participants were asked again to rate the likelihood that
-the unlabeled toy was each of the three possible toys. Our hypothesis
-and method were pre-registered prior to data collection on the Open
-Science Framework (\url{https://osf.io/kcjau}).
+We first introduced participants to the task, by asking them to
+``Imagine that {[}they{]} are a children's toy developer, and
+{[}they've{]} designed three toys that each work in different ways''. We
+showed them a picture of a possible toy with labels on its different
+parts. Then they read instructions for each of the three toy types. We
+presented Toy 1 and Toy 2 instructions in a randomized order first, and
+then Toy 3 instructions. Afterwards, they were asked what they would do
+to make the toy operate as manipulation check (e.g. ``How would you make
+the toy play music?''). We asked participants to rate prior likelihood
+that an unknown toy is a ButtonMusic toy, HandleMusic toy, or
+BothMusicLight toy, to use as priors for our model. Participants then
+read a scenario for one of the three goal conditions, followed by the
+question: ``If you only had one chance to try a SINGLE action to
+{[}goal{]}, which action would you want to take? You will get a 10 cent
+bonus after submitting the HIT if you {[}goal{]}.'' After selecting one
+of three possible actions to perform on the toy and seeing that the toy
+successfully played music, participants were asked again to rate the
+likelihood that the unlabeled toy was each of the three possible toys.
+Our hypothesis and method were pre-registered prior to data collection
+on the Open Science Framework (\url{https://osf.io/kcjau}).
 
-\section{Results}\label{results}
+\subsection{Results and discussion}\label{results-and-discussion}
 
-\subsection{Action selections}\label{action-selections}
+\subsubsection{Action selections}\label{action-selections}
 
-\subsection{Response times}\label{response-times}
+\subsubsection{Action response times}\label{action-response-times}
 
-\subsection{Entropy change}\label{entropy-change}
+\subsubsection{Belief change}\label{belief-change}
 
-\section{Discussion}\label{discussion}
+\subsubsection{BDA model-data fits}\label{bda-model-data-fits}
+
+\section{Experiment 2}\label{experiment-2}
+
+\begin{CodeChunk}
+\begin{figure*}[t]
+
+{\centering \includegraphics[width=0.95\linewidth]{figs/e2_behav_results-1} 
+
+}
+
+\caption[Behavioral results for E2]{Behavioral results for E2.}\label{fig:e2_behav_results}
+\end{figure*}
+\end{CodeChunk}
+
+\subsection{Method}\label{method-1}
+
+\subsubsection{Participants}\label{participants-1}
+
+\subsubsection{Stimuli and design}\label{stimuli-and-design-1}
+
+\subsubsection{Procedure}\label{procedure-1}
+
+\subsection{Results and discussion}\label{results-and-discussion-1}
+
+\subsubsection{Action selections}\label{action-selections-1}
+
+\subsubsection{Action response times}\label{action-response-times-1}
+
+\subsubsection{Belief change}\label{belief-change-1}
+
+\subsubsection{BDA model-data fits}\label{bda-model-data-fits-1}
+
+\section{General Discussion}\label{general-discussion}
 
 \section{Acknowledgements}\label{acknowledgements}
 
 This work was supported by NSERC postgraduate doctoral scholarship
-PGSD3-454094-2014 to EJY \ldots{} FIXME.
+PGSD3-454094-2014 to EJY and an NSF GRFP to KM {[}FIXME{]}.
 
 \section{References}\label{references}
 
